chapter 12-13 Question no 06 complete!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "cSpell.words": ["changetonumber", "sameer"]
+  "cSpell.words": [
+    "changetonumber",
+    "currentfuel",
+    "sameer"
+  ]
 }
